NXP-32816: cleanup / format